--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,19 @@
 
 <head>
   <meta charset="utf-8">
+<!-- SEO Meta Tags -->
+<meta name="description" content="Daros de la ejecución del presupuesto del Ayuntamiento de Jerez.">
+<meta name="author" content="OCM Jerez">
+
+<!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
+<meta property="og:site_name" content="" /> <!-- website name -->
+<meta property="og:site" content="" /> <!-- website link -->
+<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
+<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+<meta property="og:type" content="article" />
+
   <title>OCM Jerez</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,6 +28,15 @@
 </head>
 
 <body class="top-fixed">
+  <!-- Preloader -->
+	<div class="spinner-wrapper">
+      <div class="spinner">
+          <div class="bounce1"></div>
+          <div class="bounce2"></div>
+          <div class="bounce3"></div>
+      </div>
+  </div>
+  <!-- end of preloader -->
   <app-root></app-root>
 
 <!-- Librerias de pluggins -->
@@ -25,6 +47,23 @@
           crossorigin="anonymous"></script>
   <script src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
 
+  <!-- Custom scripts -->
+  <!-- <script src="../src/app/js/scripts1.js"></script> -->
+
+
+  <script>
+  /* Preloader */
+	$(window).on('load', function() {
+		let preloaderFadeOutTime = 500;
+		function hidePreloader() {
+			var preloader = $('.spinner-wrapper');
+			setTimeout(function() {
+				preloader.fadeOut(preloaderFadeOutTime);
+			}, 500);
+		}
+		hidePreloader();
+	});
+</script>
 </body>
 </html>
 
