--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
 <meta name="author" content="OCM Jerez">
 
 <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-<meta property="og:site_name" content="" /> <!-- website name -->
-<meta property="og:site" content="" /> <!-- website link -->
-<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+<meta property="og:site_name" content="OCM Jerez" /> <!-- website name -->
+<meta property="og:site" content="ocmjerez.org" /> <!-- website link -->
+<meta property="og:title" content="OCM Jerez"/> <!-- title shown in the actual shared post -->
+<meta property="og:description" content="Observatorio Ciudadano Municipal de Jerez" /> <!-- description shown in the actual shared post -->
 <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
 <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 <meta property="og:type" content="article" />
